# TasksManagerCPP

./: .gitignore  CMakeLists.txt  README.md  dev.ps1  tasks-linux
src/: main.cpp
src/list/: List.cpp  List.h
src/stack/: Stack.cpp  Stack.h
src/task-list/: TaskList.cpp  TaskList.h
src/types/: Node.h  Task.h
